# dotfiles

./: README.md  workspace.code-workspace
aconfmgr/: 10-ignores.sh  5-dotmgr-autogenerated-ignores.sh  99-unsorted.sh
aconfmgr/files/boot/: info.md
aconfmgr/files/etc/: group  group-  gshadow  gshadow-  ld.so.cache  machine-id  subuid
aconfmgr/files/etc/default/: grub
aconfmgr/files/etc/interception/: remap.yaml
aconfmgr/files/etc/iproute2/: rt_tables
aconfmgr/files/etc/pacman.d/: mirrorlist
aconfmgr/files/etc/sudoers.d/: 00_brody
bar/: Cargo.toml  Justfile  build.rs
bar/.cargo/: config.toml
bar/assets/: style.scss
bar/src/: bar.rs  ipc.rs  main.rs  modules.rs  popouts.rs  styles.rs
bar/src/bar/: border.rs  popouts.rs
bar/src/bar/border/: geom.rs
bar/src/modules/: battery.rs  clock.rs  launcher.rs  tray.rs  window_title.rs
bar/src/popouts/: launcher.rs
desktop/: Justfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/assets/: _bar.scss  _launcher.scss  _notifications.scss  _tray.scss  _utils.scss  styles.scss
desktop/src/: border.ts  geom.ts  main.ts  niri.ts  rendering.ts  styles.css  styles.scss  textAnimation.ts  utils.ts  widgets.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/bar/: Cargo.toml  build.rs
desktop/src-tauri/bar/permissions/autogenerated/: reference.md
desktop/src-tauri/bar/permissions/autogenerated/commands/: debug_log.toml  get_networkmanager_state.toml  get_systray_items.toml  get_upower_properties.toml  niri_request.toml
desktop/src-tauri/bar/permissions/schemas/: schema.json
desktop/src-tauri/bar/src/: lib.rs  niri.rs
desktop/src-tauri/bar/src/networkmanager/: dbus.rs  mod.rs
desktop/src-tauri/bar/src/systemtray/: debouncer.rs  mod.rs  types.rs
desktop/src-tauri/bar/src/upower/: dbus.rs  mod.rs
desktop/src-tauri/bindings/: DesktopFile.ts  ExclusiveRegions.ts  InputRect.ts  NetworkManagerState.ts  NiriIpcEvent.ts  NiriIpcRequest.ts  NiriIpcResponse.ts  Notification.ts  RinkResult.ts  Symbol.ts  SystemTray.ts  UpowerProperties.ts
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/launcher/: Cargo.toml  build.rs
desktop/src-tauri/launcher/permissions/autogenerated/: reference.md
desktop/src-tauri/launcher/permissions/autogenerated/commands/: applications_query.toml  reload_desktop_files.toml  resolve_icon.toml  rink_query.toml  start_application.toml  symbols_query.toml
desktop/src-tauri/launcher/permissions/schemas/: schema.json
desktop/src-tauri/launcher/src/: desktop_files.rs  lib.rs  rink.rs  symbols.rs
desktop/src-tauri/notifications/: Cargo.toml  build.rs
desktop/src-tauri/notifications/src/: daemon.rs  lib.rs
desktop/src-tauri/src/: ipc.rs  lib.rs  main.rs
desktop/src/bar/: battery.ts  clock.ts  niri.ts  powerOptions.ts  systray.ts  wirelessStatus.ts
desktop/src/components/: iconImage.ts  systrayIcon.ts
desktop/src/popups/: launcher.ts  notifications.ts  popups.ts
desktop/src/popups/launcher/: lancherSearch.ts  module.ts
desktop/src/popups/launcher/modules/: applicationsModule.ts  (+4 more)
dotmgr/: pyproject.toml
dotmgr/src/dotmgr/: __init__.py  config.py  logging.py  manager.py
dotmgr/src/dotmgr/default_dots/: config.toml
dotmgr/src/dotmgr/default_dots/zsh/: .zshrc  zsh.toml
dots/: config.toml
dots/kitty/: kitty.conf  kitty.toml
dots/misc/: hicolor-fix.theme  misc.toml  steam-wrapper.sh  steam.desktop
dots/niri/: animations.kdl  appearance.kdl  binds.kdl  config.kdl  environment.kdl  gestures.kdl  input.kdl  layout.kdl  niri.toml  outputs.kdl  startup.kdl  window-rules.kdl
dots/niri/bar/: bar.toml
dots/niri/compat/: brave-flags.conf
dots/niri/interception-tools/: fix-niri-altdrag  udevmon.yaml  window-binds.toml
dots/niri/lightdm/: lightdm.conf  lightdm.toml
dots/niri/wallpaper/: randomize_wallpaper.sh  readme.md  swww.toml
dots/zsh/: .zshrc  aliases.zsh  zsh.toml
fix-niri-altdrag/: Cargo.toml  inst-dots.sh
fix-niri-altdrag/src/: event.rs  main.rs  muxer.rs  process.rs
fix-niri-altdrag/src/muxer/: fifo.rs
themes/: discord.theme.css  theme.md
themes/cosmic-arch-vsc/: cosmic-arch-vsc-0.0.2.vsix  package.json
themes/cosmic-arch-vsc/themes/: Cosmic Arch VSC theme-color-theme.json
themes/gtk/: .gitignore  build.sh  install.sh  package.json  pnpm-lock.yaml  postcss.config.js
themes/gtk/postcss/resolve-gtk/: index.js  package.json  pnpm-lock.yaml
themes/gtk/src/_sass/: _color-vars.scss  _colors-gtk3.scss  _colors.scss  _gtk3-compat.scss  _gtk3.scss  _gtk4.scss  adw-gtk3-colors.scss
(+4 files in other folders)
