[package]
name = "bar"
version = "0.1.0"
edition = "2024"

[dependencies]
cairo-rs = "0.20.10"
gio = "0.20.11"
glib = "0.20.10"
gtk4 = "0.9.6"
gtk4-layer-shell = "0.5.0"
notify = "8.0.0"
palette = "0.7.6"
tokio = { version = "1.45.1", features = ["sync"] }
tracker = "0.2.2"
wayland-client = "0.31.10"
