[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "bar",
  "launcher"
]

[workspace.dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.45.1" }

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bar = { path = "./bar" }
launcher = { path = "./launcher" }
tauri = { workspace = true, features = ["protocol-asset"] }
serde = { workspace = true }
tauri-plugin-opener = "2"
serde_json = "1"
# We can't use gtk4 because Tauri uses gtk3.
# We don't interact with GTK much, though, so it's fine.
gtk = "0.18.2"
gtk-layer-shell = { version = "0.8.2", features = ["v0_6"] }
tokio = { workspace = true, features = ["net"] }
ts-rs = "11.0.1"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
