[package]
name = "notifications"
version = "0.1.0"
edition = "2024"
links = "notifications"

[dependencies]
launcher = { path = "../launcher" }
serde = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
ts-rs = "11.0.1"
zbus = "3"
zvariant = "3"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }